sumo/tests/sumo/errors/network/junction/root__junction#type__ungiven2/errors.sumo
Error: Missing attribute in junction '2'.
 Can not build according junction.
Quitting (on error).
